Details: - Configured model User - Configured model Routine - Configured model Activity - Updated Swagger API config file
